# erc-8004-py

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  SPEC.md  TEST_RESULTS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: IPFS_GUIDE.md
examples/: test_chaoschain.py  test_identity.py  test_ipfs.py  test_reputation.py  test_sepolia.py  test_validation.py
src/erc8004/: __init__.py  client.py  identity.py  reputation.py  types.py  validation.py
src/erc8004/abis/: IdentityRegistry.json  ReputationRegistry.json  ValidationRegistry.json
src/erc8004/adapters/: __init__.py  base.py  web3_adapter.py
src/erc8004/utils/: __init__.py  ipfs.py
